# inthon

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  RELEASE.md  SECURITY.md  embedded_captions_workflow.inth  inthon.toml  pyproject.toml  skills-lock.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
_authors/: harvatechs.md
_posts/community/: 2026-07-09-introducing-inthon-agent-level-programming.md
benchmarks/: README.md  generate_graphs.py  results.json  results_safety.json  results_token_efficiency.json  results_workflow_correctness.json  run_all.py  safety.py  token_efficiency.py  workflow_correctness.py
benchmarks/suite/: agent_fuzzy_parsing.inth  agent_fuzzy_parsing.py  agent_hallucination.inth  agent_hallucination.py  agent_infinite_loop.inth  agent_infinite_loop.py  agent_memory_squeeze.inth  agent_memory_squeeze.py  agent_metrics.json  agent_multi_tool.inth  agent_multi_tool.py  baseline.txt  generate_report.py  run_agent_benchmarks.py  update_readmes.py
docs/: _config.yml  blog.html  guide.html  index.html  spec.html
docs/_layouts/: default.html
docs/blog/: 2026-06-16-why-ai-agents-need-their-own-programming-language.html  2026-06-22-agent-skill-blocks-introduction.html  2026-06-22-inthon-agentic-ui-introduction.html
documents/: wikipedia_article_draft.mw  wikipedia_article_draft_clean.mw
documents/inthon-demo/: index.html  meta.json  package-lock.json  package.json
examples/: agent_research.inth  approval_gate.inth  csv_summary.inth  deep_researcher.inth  fibonacci.inth  hello.inth  lead_researcher.inth  text_utils.py  tool_search.inth  ui_assistant.inth  web_summarizer.inth
ide/: inthon-ide.html  inthon_server.py  launch.bat  launch.sh
ide/vscode/: LICENSE  README.md  extension.js  language-configuration.json  package.json
installer/: associate_inth.reg  build_installer.py  installer.py  inthon-installer.spec  inthon-mime.xml  inthon.spec  inthon_bin.py  uninstall.spec  uninstaller.py
inthon/: __init__.py  api.py  cli.py  errors.py  errors_diagnostic.py  fmt.py  repl.py  version.py
inthon/ast/: __init__.py  nodes.py  printer.py  visitor.py
inthon/compiler/: transpiler.py
learn/: 01_getting_started.md  02_syntax_basics.md  03_agents_and_tools.md  04_pybridge_interop.md  05_advanced_features.md  06_templates.md  README.md  playbook.md
tests/: conftest.py
(+156 files in other folders)
